# timeo

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONVENTIONS.md  LICENSE  README.md  flake-explained.md  flake.nix  hello.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
scripts/: smoke_concurrent.py  smoke_learn_mode.py  smoke_live_context.py  smoke_sequential.py
steps/: 01-package-scaffold.md  02-tracked-task-model.md  03-progress-manager.md  04-track-decorator.md  05-public-api.md  06-timing-cache.md  07-learn-mode.md  08-tests.md  09-ci-cd.md  10-polish.md
tests/: test_cache.py  test_cli.py  test_decorator.py  test_hashing.py  test_learn_mode.py  test_task.py
timeo/: __init__.py  cache.py  cli.py  decorator.py  hashing.py  manager.py  task.py
