[project]
name = "timeo"
version = "0.1.0"
description = "Terminal progress bars via decorators"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "platformdirs>=4.0",
    "rich>=14.3.3",
]

[dependency-groups]
dev = [
    "pre-commit>=3.0",
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["timeo"]
