[project]
name = "timeo"
version = "0.3.0"
description = "Terminal progress bars via decorators"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["progress", "terminal", "decorator", "cli", "rich"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Terminals",
]
dependencies = [
    "platformdirs>=4.0",
    "rich>=14.3.3",
]

[dependency-groups]
dev = [
    "pre-commit>=3.0",
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["timeo"]

[tool.hatch.build.targets.sdist]
exclude = ["scripts/", "tests/", "steps/"]
